--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.10.3
   image_picker: ^0.8.4+4
   xfile: ^1.1.0
+  firebase_database: ^10.0.15
   
 dev_dependencies:
   flutter_test:
